--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -63,18 +63,16 @@ jobs:
       - name: Set Vercel Environment Variables
         run: |
           vercel env ls --environment=preview --git-branch=${{steps.get_pull_request_sha.outputs.pull_request_sha}} --token=$VERCEL_TOKEN
-          echo ${{env.DATABASE_URL}} | vercel env add DATABASE_URL secret --environment=preview --git-branch=${{steps.get_pull_request_sha.outputs.pull_request_sha}}
+          echo ${{env.DATABASE_URL}} | vercel env add DATABASE_URL secret --environment=preview --git-branch=${{steps.get_pull_request_sha.outputs.pull_request_sha}} --token=$VERCEL_TOKEN
 
       - name: Pull Vercel Environment Information (Preview Specific)
-        run:
-          vercel pull --yes --environment=preview --token=${{
-          secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
 
       - name: Pull Vercel Environment Information (Branch Specific)
         run:
           vercel pull --yes --environment=preview
           --git-branch=${{steps.get_pull_request_sha.outputs.pull_request_sha}}
-          --token=${{ secrets.VERCEL_TOKEN }}
+          --token=$VERCEL_TOKEN
 
       - name: Run Prisma Migrate
         run: |
