--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -62,8 +62,7 @@ jobs:
       # BUG: On May 1st 2024, Vercel will no longer use secrets. See link for more info: https://vercel.com/changelog/legacy-environment-variable-secrets-are-being-sunset
       - name: Set Vercel Environment Variables
         run: |
-          vercel env add DATABASE_URL $DATABASE_URL --environment=preview --git-branch=${{steps.get_pull_request_sha.outputs.pull_request_sha}} --token $VERCEL_TOKEN
-          vercel env add DIRECT_DATABASE_URL $DIRECT_DATABASE_URL --environment=preview --git-branch=${{steps.get_pull_request_sha.outputs.pull_request_sha}} --token $VERCEL_TOKEN
+          echo $DATABASE_URL | vercel env add DATABASE_URL preview ${{steps.get_pull_request_sha.outputs.pull_request_sha}} --token $VERCEL_TOKEN
 
       - name: Pull Vercel Environment Information (Preview Specific)
         run: vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
