--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -74,10 +74,6 @@ jobs:
           vercel pull --yes --environment=preview
           --git-branch=${{github.head_ref}} --token=$VERCEL_TOKEN
 
-      - name: display .env
-        run: |
-          cat .vercel/.env.preview.local
-
       - name: Run Prisma Migrate
         run: |
           npx prisma migrate deploy
@@ -119,7 +115,7 @@ jobs:
           vercel --version
           vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
           vercel build --token=$VERCEL_TOKEN
-          vercel deploy --prebuilt --archive=tgz --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }}
+          vercel deploy --prebuilt --archive=tgz --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }} --name ${{ github.head_ref }}
 
           vercel ls --token=$VERCEL_TOKEN --meta base_hash=${{ env.META_TAG }} &> vercel-output
           url=$(cat vercel-output | grep http | awk '{print $2}')
