--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test": "vitest run --passWithNoTests",
     "test:watch": "vitest",
-    "lint": "prettier --check . && eslint .",
+    "lint": "prettier --check . && eslint . && npm run typecheck",
     "prisma:validate": "npx prisma format && npx prisma validate",
     "format": "prettier --write . && npx prisma format",
     "typecheck": "tsc",
