--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test": "vitest run --passWithNoTests",
     "test:watch": "vitest",
-    "lint": "prettier --check . && eslint . && npm run typecheck",
+    "lint": "prettier --check . && eslint .",
     "prisma:validate": "npx prisma format && npx prisma validate",
     "format": "prettier --write . && npx prisma format",
-    "typecheck": "tsc",
+    "typecheck": "tsc --noEmit",
     "postinstall": "prisma generate",
     "prepare": "husky install",
     "pre-commit": "lint-staged && npm test"
