--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -14,6 +14,7 @@ jobs:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       DIRECT_DATABASE_URL: ${{ secrets.DIRECT_DATABASE_URL }}
       SESSION_SIGNING_KEY: ${{ secrets.SESSION_SIGNING_KEY }}
+      EXEC_ENV: ${{ vars.EXEC_ENV }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -62,4 +63,7 @@ jobs:
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
 
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run:
+          vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+          --env DATABASE_URL=$DATABASE_URL --env
+          DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL --env EXEC_ENV=$EXEC_ENV
