--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -66,4 +66,5 @@ jobs:
         run:
           vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
           --env DATABASE_URL=$DATABASE_URL --env
-          DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL --env EXEC_ENV=$EXEC_ENV
+          DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL --env
+          SESSION_SIGNING_KEY=$SESSION_SIGNING_KEY --env EXEC_ENV=$EXEC_ENV
