--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/d3-scale": "^4.0.8",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20.11.0",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -72,8 +74,10 @@
     "@vercel/speed-insights": "^1.0.2",
     "bcrypt": "^5.1.1",
     "cssnano": "^6.0.3",
+    "d3-scale": "^4.0.2",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
