--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "cssnano": "^6.0.3",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
+    "mapbox": "^1.0.0-beta10",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
