ci: deploy preview ignores main and develop branches

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -3,6 +3,7 @@ name: Deploy Preview
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+    branches-ignore: [main, master, develop]
 
 jobs:
   deploy_preview:
