--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@prisma/client": "^5.10.2",
     "@sveltejs/adapter-vercel": "^4.0.3",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/blob": "^0.22.1",
     "@vercel/speed-insights": "^1.0.2",
     "@vincjo/datatables": "^1.14.5",
     "bcrypt": "^5.1.1",
