create and delete neon databases based on the branch name

--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -34,20 +34,19 @@ jobs:
         run: |
           npm run build
 
-      - name: Get PR sha
-        id: get_pull_request_sha
+      - name: Get PR Branch Name
+        id: get_pull_request_branch_name
         run: |
-          pull_request_sha=$(jq --raw-output .pull_request.base.sha "$GITHUB_EVENT_PATH" | cut -c1-8)
-          echo "pull_request_sha=${pull_request_sha}" >> $GITHUB_OUTPUT
-          echo $pull_request_sha
-          echo ${{github.event.pull_request.base.sha}}
+          branch_name=${{ github.event.pull_request.base.ref }}
+          echo "branch_name=${pull_request_sha}" >> $GITHUB_OUTPUT
+          echo $branch_name
 
       - name: Neon Database Create Branch Action
         uses: neondatabase/create-branch-action@v3
         id: create_branch
         with:
           project_id: ${{ secrets.NEON_PROJECT_ID }}
-          branch_name: ${{steps.get_pull_request_sha.outputs.pull_request_sha}}
+          branch_name: ${{steps.get_pull_request_branch_name.outputs.branch_name}}
           api_key: ${{ secrets.NEON_API_KEY }}
           username: ${{ secrets.PG_USERNAME }}
           password: ${{ secrets.PG_PASSWORD }}
