--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -22,9 +22,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Get last commit SHA
-        id: get_sha
+        id: get_branch
         run: |
-          echo sha="${{ github.event.before }}" | cut -c1-8 >> $GITHUB_OUTPUT
+          echo "::set-output name=branch::$(git branch --contains ${{ github.event.before }} | sed -n 2p)"
+          # echo sha="${{ github.event.before }}" | cut -c1-8 >> $GITHUB_OUTPUT
 
       - name: Search branch by name
         id: get_branch_id
@@ -36,7 +37,7 @@ jobs:
             --header "Content-Type: application/json" \
             --header "Authorization: Bearer ${{ secrets.NEON_API_KEY }}" \
             | jq -r .branches \
-            | jq -c '.[] | select(.name | contains("'${{ steps.get_sha.outputs.sha }}'")) .id' \
+            | jq -c '.[] | select(.name | contains("'${{ steps.get_branch.outputs.branch }}'")) .id' \
             | jq -r \
             ) \
             
