--- a/.github/workflows/remove-pr-database.yml
+++ b/.github/workflows/remove-pr-database.yml
@@ -19,30 +19,27 @@ jobs:
       - name: Get Closed PR Head Ref Branch Name
         id: get_branch_name
         run: |
-          echo "::set-output name=branch_name::$(git branch --contains ${{ github.event.before }} | sed -n 2p)"
-          echo "branch_name= $(git branch --contains ${{ github.event.before }} | sed -n 2p)"
-          echo "head_ref=${{ github.event.pull_request.head.ref }}"
-          # echo sha="${{ github.event.before }}" | cut -c1-8 >> $GITHUB_OUTPUT
+          echo "branch_name=${{ github.event.pull_request.head.ref }}" >> $GITHUB_OUTPUT
 
-      # - name: Search branch by name
-      #   id: get_branch_id
-      #   # list all branches and filter by name
-      #   run: |
-      #     branch_id=$(curl --silent \
-      #     "https://console.neon.tech/api/v2/projects/${{ secrets.NEON_PROJECT_ID }}/branches" \
-      #     --header "Accept: application/json" \
-      #     --header "Content-Type: application/json" \
-      #     --header "Authorization: Bearer ${{ secrets.NEON_API_KEY }}" \
-      #     | jq -r .branches \
-      #     | jq -c '.[] | select(.name | contains("'${{ steps.get_branch.outputs.branch_name }}'")) .id' \
-      #     | jq -r \
-      #     ) \
+      - name: Search branch by name
+        id: get_branch_id
+        # list all branches and filter by name
+        run: |
+          branch_id=$(curl --silent \
+          "https://console.neon.tech/api/v2/projects/${{ secrets.NEON_PROJECT_ID }}/branches" \
+          --header "Accept: application/json" \
+          --header "Content-Type: application/json" \
+          --header "Authorization: Bearer ${{ secrets.NEON_API_KEY }}" \
+          | jq -r .branches \
+          | jq -c '.[] | select(.name | contains("'${{ steps.get_branch_name.outputs.branch_name }}'")) .id' \
+          | jq -r \
+          ) \
 
-      #     echo "branch_id=${branch_id}" >> $GITHUB_OUTPUT
+          echo "branch_id=${branch_id}" >> $GITHUB_OUTPUT
 
-      # - name: Delete Neon Branch (latest Preview Branch)
-      #   uses: neondatabase/delete-branch-action@v2
-      #   with:
-      #     project_id: ${{ secrets.NEON_PROJECT_ID }}
-      #     branch_id: ${{ steps.get_branch_id.outputs.branch_id }}
-      #     api_key: ${{ secrets.NEON_API_KEY }}
+      - name: Delete Neon Branch (latest Preview Branch)
+        uses: neondatabase/delete-branch-action@v2
+        with:
+          project_id: ${{ secrets.NEON_PROJECT_ID }}
+          branch_id: ${{ steps.get_branch_id.outputs.branch_id }}
+          api_key: ${{ secrets.NEON_API_KEY }}
