--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "cssnano": "^6.0.3",
     "d3-scale": "^4.0.2",
     "dotenv": "^16.3.1",
+    "flatpickr": "^4.6.13",
     "jsonwebtoken": "^9.0.2",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
