--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/d3-scale": "^4.0.8",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.26",
+    "@types/svelte-range-slider-pips": "^2.0.4",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -53,6 +54,7 @@
     "prisma": "^5.7.1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-range-slider-pips": "^2.3.1",
     "tailwindcss": "^3.3.6",
     "ts-node": "^10.9.2",
     "tslib": "^2.4.1",
