--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "dotenv": "^16.3.1",
     "flatpickr": "^4.6.13",
     "jsonwebtoken": "^9.0.2",
+    "svelte-maplibre": "^0.8.2",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
