--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/d3-scale": "^4.0.8",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.26",
+    "@types/nodemailer": "^6.4.14",
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -79,6 +80,7 @@
     "dotenv": "^16.3.1",
     "flatpickr": "^4.6.13",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.12",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
