--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -40,3 +40,7 @@ jobs:
           --env DATABASE_URL=$DATABASE_URL --env
           DIRECT_DATABASE_URL=$DIRECT_DATABASE_URL --env
           SESSION_SIGNING_KEY=$SESSION_SIGNING_KEY --env EXEC_ENV=$EXEC_ENV
+          --env SMTP_HOST=${{secrets.SMTP_HOST}} --env
+          SMTP_PORT=${{secrets.SMTP_PORT}} --env
+          SMTP_USER=${{secrets.SMTP_USER}} --env
+          SMTP_PASS=${{secrets.SMTP_PASS}}
