--- a/package.json
+++ b/package.json
@@ -73,13 +73,13 @@
     "@prisma/client": "^5.10.2",
     "@sveltejs/adapter-vercel": "^4.0.5",
     "@vercel/analytics": "^1.1.1",
-    "@vercel/blob": "^0.22.1",
     "@vercel/speed-insights": "^1.0.2",
     "@vincjo/datatables": "^1.14.5",
     "bcrypt": "^5.1.1",
     "cssnano": "^6.0.3",
     "d3-scale": "^4.0.2",
     "dotenv": "^16.3.1",
+    "firebase": "^10.9.0",
     "flatpickr": "^4.6.13",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.12",
