--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -23,6 +23,10 @@ jobs:
         run: |
           npx prisma migrate deploy
 
+      - name: Run Prisma SeedMain
+        run: |
+          npx prisma db seedMain
+
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
