--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "^1.6.3",
+    "@maplibre/maplibre-gl-directions": "^0.6.1",
     "@neondatabase/serverless": "^0.6.1",
     "@prisma/adapter-neon": "^5.10.2",
     "@prisma/client": "^5.10.2",
