--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -39,7 +39,8 @@ jobs:
         run: |
           branch_name=${{ github.event.pull_request.head.ref }}
           if [[ branch_name == "develop" ]]; then
-            $branch_name="preview/develop"
+            echo "name is develop"
+            branch_name="preview/develop"
           fi
           echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
           echo $branch_name
