--- a/.github/workflows/remove-pr-database.yml
+++ b/.github/workflows/remove-pr-database.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           branch_name=${{ github.event.pull_request.head.ref }}
           if [[ branch_name == "develop" ]]; then
-            $branch_name="preview/develop"
+            branch_name="preview/develop"
           fi
           echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
 
