--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -38,8 +38,7 @@ jobs:
         id: get_pull_request_branch_name
         run: |
           branch_name=${{ github.event.pull_request.head.ref }}
-          if [[ branch_name == "develop" ]]; then
-            echo "name is develop"
+          if [[ $branch_name == "develop" ]]; then
             branch_name="preview/develop"
           fi
           echo "branch_name=${branch_name}" >> $GITHUB_OUTPUT
